# datafusion-gpu

./: .gitignore  Cargo.toml  README.md
benches/: cuda_sum.rs
src/: cubecl_sum_udaf.rs  cudarc_sum_udaf.rs  gpu_aggregate_exec.rs  gpu_aggregate_optimizer_rule.rs  gpu_aggregate_plan_node.rs  gpu_aggregate_planner.rs  gpu_aggregate_query_planner.rs  gpu_sum_accumulator.rs  gpu_sum_udaf.rs  lib.rs  main.rs  sum.cu
