[package]
name = "datafusion-playground"
version = "0.1.0"
edition = "2021"

[features]
cuda = ["cubecl/cuda", "cudarc"]

[dependencies]
datafusion = "43.0.0"
anyhow = "1.0.93"
tokio = { version = "1.41.1" , features = ["full"]}
delegate = "0.13.1"
cubecl = { version = "0.3.0", features = ["wgpu"]}
rand = "0.8.5"
clap = { version = "4.5.21", features = ["derive"] }
rustyline = "15.0.0"
cudarc = { version = "0.12.1" , optional = true }
