[package]
name = "datafusion-gpu"
version = "0.1.0"
edition = "2021"

[features]
cuda = ["cubecl/cuda", "cudarc"]

[dependencies]
datafusion = "43.0.0"
anyhow = "1.0.93"
tokio = { version = "1.41.1" , features = ["full"]}
delegate = "0.13.1"
cubecl = { git = "https://github.com/tracel-ai/cubecl", rev = "1c4e0036c043422773fd6824c2a888160fca8e5e", features = ["wgpu"]}
cubecl-reduce = { git = "https://github.com/tracel-ai/cubecl", rev = "1c4e0036c043422773fd6824c2a888160fca8e5e"}
rand = "0.8.5"
clap = { version = "4.5.21", features = ["derive"] }
rustyline = "15.0.0"
cudarc = { version = "0.12.1" , optional = true }
